--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,6 +9,17 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
+	<script src="js/appi.js"></script>
+
+
+
+
+
+
+
+
+
+
 </head>
 <body>
 <header>
@@ -36,7 +47,9 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
-		<div class="gallery">
+
+			<div class="gallery">
+			<!--
 			<figure>
 				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
 				<figcaption>Abajour Tahina</figcaption>
@@ -82,6 +95,7 @@
 				<figcaption>Hotel First Arte - New Delhi</figcaption>
 			</figure>
 		</div>
+		-->
 	</section>
 	<section id="contact">
 		<h2>Contact</h2>
