Page d'accueil affichage des images

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
-	<script src="/js/api.js"></script>
+	<script src="./assets/js/javascript.js"></script>
 
 </head>
 <body>
@@ -40,7 +40,8 @@
 			<h2>
 				Mes Projets
 			</h2>		
-			<div class="gallery"></div>
+			<section class="gallery"></section>
+
 				<!-- <figure>
 					<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
 					<figcaption>Abajour Tahina</figcaption>
